# gl-graphics

./: .gitattribute  .gitattributes  CMakeLists.txt  README.md  run.sh
glsl/: fragment.frag  shader.glsl
include/: shader.h  window.h
include/glad/: glad.h
src/: glad.c  main.c  shader.c  window.c
